# libmpg123

./: .gitignore  BUILD.bazel
mpg123/: config.h  mpg123.h
